--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,9 @@
       
     </div>
     <p>Hello! My name is She Song, I’m graduate student from ShenZhen University. I am interested in <strong>Distributed Computing</strong> and <strong>Machine Learning</strong>.</p>
-<div align="center"><br>欢迎您捐赠本站，您的支持是我最大的动力！<br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png"><br> </div>
+<center><br>欢迎您捐赠本站，您的支持是我最大的动力！<br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"><br></center>
+
+
 
   </article>
   </script>
