--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
       
     </div>
     <p>Hello! My name is She Song, I’m graduate student from ShenZhen University. I am interested in <strong>Distributed Computing</strong> and <strong>Machine Learning</strong>.</p>
-<p></p><p align="center"><br>Welcome to donate this site, your support is my biggest motivation!<br></p><br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"><p></p>
+<p></p><h2 align="center"><br>Welcome to donate this site, your support is my biggest motivation!<br></h2><br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"><p></p>
 
 
   </article>
@@ -83,6 +83,24 @@
     站访客数:&nbsp;<span id="busuanzi_value_site_uv"></span>
   </div>
 
+
+<div id="disqus_thread"></div>
+<script>
+
+var disqus_config = function () {
+this.page.url = 'http://www.shesong.org/about/index.html';
+this.page.identifier = undefined;
+};
+
+(function() { // DON'T EDIT BELOW THIS LINE
+var d = document, s = d.createElement('script');
+
+s.src = '//最无聊.disqus.com/embed.js';
+
+s.setAttribute('data-timestamp', +new Date());
+(d.head || d.body).appendChild(s);
+})();
+</script>
 
 
 
