add atom sitemap

--- a/about/index.html
+++ b/about/index.html
@@ -70,7 +70,7 @@
       
     </div>
     <p>Hello! My name is She Song, I’m graduate student from ShenZhen University. I am interested in <strong>Distributed Computing</strong> and <strong>Machine Learning</strong>.</p>
-<p>your support is my biggest motivation!<br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"></p>
+<p>Your support is my biggest motivation!<br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"></p>
 
 
   </article>
