--- a/index.html
+++ b/index.html
@@ -53,6 +53,23 @@ var _hmt = _hmt || [];
 
 
   
+  <ul class="nav navbar-nav navbar-left">
+    <li class="navbar-header">
+      <a href="/" class="navbar-brand">ss</a>
+    </li>
+    <li class="dropdown">
+      <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+        <i class="fa fa-tags fa-lg"></i>
+      </span></a>
+      <ul class="dropdown-content">
+
+          
+           <li><a href="/categories/Test/">Test</a></li>
+
+      </ul>
+    </li>
+  </ul>
+  
   <div id="site_search" class="">
   <input type="text" id="local-search-input" name="q" placeholder="search" class="form-control"/>
 </div>
@@ -135,6 +152,11 @@ var _hmt = _hmt || [];
 </time>
 
 
+
+    
+    &nbsp;
+    <i class="fa fa-tag"></i>&nbsp;
+    <a href="/categories/Test/">Test</a>
 
 
 
