--- a/about/index.html
+++ b/about/index.html
@@ -25,6 +25,36 @@
   <link rel="icon" type="image/x-icon" href="/favicon.ico">
 </head>
 
+<!-- mathjax config similar to math.stackexchange -->
+
+<script type="text/x-mathjax-config">
+  MathJax.Hub.Config({
+    tex2jax: {
+      inlineMath: [ ['$','$'], ["\\(","\\)"] ],
+      processEscapes: true
+    }
+  });
+</script>
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+      tex2jax: {
+        skipTags: ['script', 'noscript', 'style', 'textarea', 'pre', 'code']
+      }
+    });
+</script>
+
+<script type="text/x-mathjax-config">
+    MathJax.Hub.Queue(function() {
+        var all = MathJax.Hub.getAllJax(), i;
+        for(i=0; i < all.length; i += 1) {
+            all[i].SourceElement().parentNode.className += ' has-jax';
+        }
+    });
+</script>
+
+<script type="text/javascript" src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML">
+</script>
 <body>
   <a id="top"></a>
   <div id='wx_pic' style='display:none;'><img src='/wx_share.png'/></div>
@@ -70,7 +100,7 @@
       
     </div>
     <p>Hello! My name is She Song, I’m graduate student from ShenZhen University. I am interested in <strong>Distributed Computing</strong> and <strong>Machine Learning</strong>.</p>
-<p>Your support is my biggest motivation!<br><img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"></p>
+<p>Your support is my biggest motivation! <img src="https://ooo.0o0.ooo/2017/02/15/58a3c7140b539.png" alt="a6x06799szvx1ixcs4pfb7f.png"></p>
 
 
   </article>
