--- a/about/index.html
+++ b/about/index.html
@@ -64,7 +64,7 @@
         <a href="/" class="black-color"><i class="fa fa-times" aria-hidden="true"></i></a>
       </div>
       <div class="description">
-        &nbsp;
+        &nbsp;Easy words so hard to say
       </div>
     </div>
     <div class="container">
@@ -143,7 +143,7 @@ s.setAttribute('data-timestamp', +new Date());
         <a href="#top" target="_self">
         <i class="fa fa-arrow-right"></i>
         </a>
-        © song 2016
+        © song 2016-2017
     </div>
     <div class="secondrow">
         <a href="/about">
